--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "ant-design-vue": "^4.2.6",
+    "axios": "^1.10.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-i18n": "^11.1.9",
